hphp/hack/test/typecheck/await_as_an_expression/error/await_as_an_expression_pipe.php
<?hh

async function f(): Awaitable<int> {
  return 1;
}

async function g(): Awaitable<void> {
  await f() |> await f();
}
